@@ -1,4 +1,5 @@
--Xmx6G
--XX:MaxDirectMemorySize=2G
+-Xmx2G
 -XX:+UseG1GC
--XX:+ExitOnOutOfMemoryError
+-XX:G1HeapRegionSize=32M
+-XX:+UseStringDeduplication
+-Djdk.attach.allowAttachSelf=true
